fix gap on bars

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -112,7 +112,7 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 4px;
+  gap: 2px;
   margin-top: 10px;
 }
 
@@ -120,6 +120,7 @@
   position: relative;
   width: 100%;
   max-width: 300px;
+  margin: 0;
   margin-bottom: 0;
   padding: 0;
 }
